jupiter/io/deploy/minikube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: io
  labels:
    app: io
spec:
  replicas: 1
  selector:
    matchLabels:
      app: io
  template:
    metadata:
      labels:
        app: io
    spec:
      containers:
        - name: io
          image: io:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              name: http 
#          readinessProbe:
#            httpGet:
#              path: /actuator/health
#              port: 8080
#            initialDelaySeconds: 5
#            periodSeconds: 3
#            failureThreshold: 60
#          livenessProbe:
#            httpGet:
#              path: /actuator/health
#              port: 8080
#            initialDelaySeconds: 10
#            periodSeconds: 10
#            failureThreshold: 6
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1
              memory: 1Gi
